<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arcs_cohort_simulation</name>
  <version>0.0.0</version>
  <description>A meta-package containing simulation repository dependencies for the CSUN ARCS CoHORT project.</description>
  <maintainer email="barry.ridge@csun.edu">Barry Ridge</maintainer>
  <maintainer email="subhobrata.chakraborty@csun.edu">Subhobrata Chakraborty</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>arcs_cohort_gazebo_sim</depend>
  <depend>arcs_cohort_issac_sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>meta_package</member_of_group>
</package>
